@@ -1,3 +1,11 @@
+2013-10-14  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* libs/tcpd/libcouriertls.c (tls_create): Add TLSv1_1_method() and
+	TLSv1_2 method(), based on patch by Rob Austein <sra@hactrn.net>.
+
+	* pop3d-ssl.dist.in, imapd-ssl.dist.in: Fix up differences in the
+	documentation of TLS options in various config files.
+
 4.14.0
 
 2013-07-04  Sam Varshavchik  <mrsam@courier-mta.com>
